2001-11-23 17:57 GMT-3 Horacio Roldan <harbour_ar@yahoo.com.ar>
   * source/rdd/dbfcdx/dbfcdx1.c
     ! fixed gpf with autoopen
     ! fixed dbSeek for padded strings

2001-11-22 23:55 UTC-0800 Brian Hays <bhays@abacuslaw.com>

   * contrib/rdd_ads/ads1.c
      * quieted warnings in adsSetScope

2001-11-22 15:11 GMT+1 Maurilio Longo <maurilio.longo@libero.it>
   * contrib/mysql/readme.txt
     * little changes

2001-11-22 19:55 GMT+0700 Andi Jahja <harbour@cbn.net.id>
   * include/hbapi.h
     + add declaration char * hb_strncpyUpperTrim()

2001-11-21 17:45 UTC-0800 Brian Hays <bhays@abacuslaw.com>

   * source/rtl/strcase.c
      + added hb_strncpyUpperTrim to both upperize and trim

   * contrib/rdd_ads/ads1.c
      * removed bad pointer initialization

   * source/rdd/dbcmd.c
      * fieldpos() now calls hb_strncpyUpperTrim so padded
         field names don't fail

   * contrib/rdd_ads/adsfunc.c
      * fixed AdsGetAOFOptLevel to return correct value if there's
         no AOF active

2001-11-22 04:45 GMT+0700 Andi Jahja <harbour@cbn.net.id>
   * contrib/libnf/getvid.c
     ! HB_FUNC(_V_SETVPG), use int iPage only if HB_OS_DOS is defined
   * source/common/hbfsapi.c
     ! undefine _NFILE_ before redefining (was defined in BCC's _nfile.h)

2001-11-21 16:40 GMT-3 Horacio Roldan <harbour_ar@yahoo.com.ar>
   * source/rdd/dbfcdx/dbfcdx1.c
     ! fixed eof() bug

2001-11-21 12:31 GMT Dave Pearson <davep@davep.org>
   * source/rdd/dbcmd.c
     - Removed (using "#if 0...") hb_waNull().

2001-11-21 09:15 GMT -3 Luiz Rafael Culik<culik@sl.conex.net>
   * source/debug/debugger.prg
   * sorce/debug/dbgtarr.prg
      * Fixed an small bug that was forget to fix on previus upload

2001-11-21 06:35 GMT -3 Luiz Rafael Culik<culik@sl.conex.net>
   * source/debug/debugger.prg
      * Some enhacements, now you can use the Pgup/pgdown keys.
   * source/common/hbfspai.c
      * Added code to make harbour apps compiler with borland compiler open mode then 50 files