@@ -1,3 +1,12 @@
+2001-11-26 22:55 GMT+1 JFL (mafact) <jfl@mafact.com>
+   * harbour/source/vm/classes.c
+     * Freezed ('remed') scoping due to a small bug wich could always
+       create a false scoping error ...
+   * harbour/source/vm/hvm.c
+     * Changed the way a super call is done so now
+       Super:Init(::nX) is allowed and ::nX is correctly seen
+       befor ethat it was see as ::Super:nX ...
+
 2001-11-23 17:57 GMT-3 Horacio Roldan <harbour_ar@yahoo.com.ar>
    * source/rdd/dbfcdx/dbfcdx1.c
      ! fixed gpf with autoopen
